# librfxcodec

./: .travis.yml  Makefile.am  bootstrap  configure.ac
include/: Makefile.am  ms-rdprfx.h  rfxcodec_common.h  rfxcodec_encode.h
m4/: nasm.m4
src/: Makefile.am  rfx_bitstream.h  rfxcommon.h  rfxcompose.c  rfxcompose.h  rfxconstants.h  rfxencode.c  rfxencode.h  rfxencode_alpha.c  rfxencode_alpha.h  rfxencode_compose.c  rfxencode_compose.h  rfxencode_diff_rlgr1.c  rfxencode_diff_rlgr1.h  rfxencode_diff_rlgr3.c  rfxencode_diff_rlgr3.h  rfxencode_differential.c  rfxencode_dwt.c  rfxencode_dwt.h  rfxencode_dwt_rem.c  rfxencode_dwt_rem.h  rfxencode_dwt_shift_rem.c  rfxencode_dwt_shift_rem.h  rfxencode_quantization.c  rfxencode_quantization.h  rfxencode_rgb_to_yuv.c  rfxencode_rgb_to_yuv.h  rfxencode_rlgr1.c  rfxencode_rlgr1.h  rfxencode_rlgr3.c  rfxencode_rlgr3.h  rfxencode_tile.c  rfxencode_tile.h
src/amd64/: Makefile.am  cpuid_amd64.asm  funcs_amd64.h  rfxcodec_encode_dwt_shift_amd64_sse2.asm  rfxcodec_encode_dwt_shift_amd64_sse41.asm  rfxencode_tile_amd64.c
src/arm64/: Makefile.am  arm64_is_neon_supported.c  cpuid_amd64.asm  fakesse.h  funcs_arm64.h  rfxcodec_encode_dwt_shift_amd64_sse41.asm  rfxencode_tile_arm64.c
src/x86/: Makefile.am  cpuid_x86.asm  funcs_x86.h  rfxcodec_encode_dwt_shift_x86_sse2.asm  rfxcodec_encode_dwt_shift_x86_sse41.asm  rfxencode_tile_x86.c
tests/: Makefile.am  rfxcodectest.c  rfxencode.c  test-encode
